new file:   locales/zh_CN/LC_MESSAGES/authoring/index.po

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -13,3 +13,7 @@ h3::before {
     counter-increment: subsubsection;
     content: counter(subsection) "." counter(subsubsection) ". ";
 }
+
+url {
+    color: aqua;
+}
